[gd_scene load_steps=3 format=3 uid="uid://cmrr53q6i5syn"]

[ext_resource type="Script" path="res://scenes/load_menu.gd" id="1_0igbk"]
[ext_resource type="Texture2D" uid="uid://dpgo7u5vdp2ak" path="res://asset/menu_bg.png" id="2_hh35q"]

[node name="LoadMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0igbk")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.870588, 0.870588, 0.870588, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_hh35q")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 210.0
offset_right = 812.0
offset_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Save0" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
text = "Save 0"

[node name="Save1" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
text = "Save 1"

[node name="Save2" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
text = "Save 2"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Save0" to="." method="_on_save_0_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Save1" to="." method="_on_save_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Save2" to="." method="_on_save_2_pressed"]
